# unbosque_calendar

./: .env.example.prod  .gitignore  Dockerfile  Dockerfile.dev  Makefile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml
core/: api.py  forms.py  models.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/core/: show_schedule.html  successfully_subscribed.html  unable_to_subscribe.html
unbosque_calendar/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
