[tool.poetry]
name = "unbosque-calendar"
version = "0.1.0"
description = ""
authors = ["wolf <wolfgangsalazarmora@gmail.com>"]
readme = "README.md"
packages = [{include = "unbosque_calendar"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
celery = "^5.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
